# bricksync

./: .gitignore  README.md  pyproject.toml
.github/workflows/: onpush.yaml
bricksync/: __init__.py
bricksync/.github/workflows/: onpush.yaml
bricksync/config/: __init__.py
bricksync/exceptions/: __init__.py
bricksync/provider/: __init__.py  aws.py  databricks.py  snowflake.py
bricksync/provider/catalog/: __init__.py  databricks.py  glue.py  snowflake.py
bricksync/provider/source/: __init__.py  databricks.py
bricksync/table/: __init__.py
tests/: test_bricksync.py  test_catalog.py  test_databricks_catalog.py  test_snowflake_catalog.py  test_table.py
