[tool.poetry]
name = "bricksync"
version = "0.1.0"
description = ""
authors = ["Brandon Kvarda <bjkvarda@gmail.com>"]
readme = "README.md"
packages = [{include = "bricksync"}]

[tool.poetry.dependencies]
python = "^3.10"
databricks-sdk = "0.28.0"
snowflake-connector-python = "^3.6.0"
botocore = ">=1.33.0"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
sqlglot = "^20.11.0"
pyyaml = "^6.0.1"
boto3-stubs = {extras = ["glue"], version = "^1.34.39"}
pydantic = "^2.7.1"
databricks-sql-connector = "^3.1.2"
databricks-connect = "13.3.0"
pyiceberg = {git = "https://github.com/apache/iceberg-python.git"}
boto3 = "^1.34.137"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
